--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModel"
             type="com.watermelon.moviesapp.ui.search.SearchViewModel" />
@@ -27,7 +28,25 @@
             app:layout_constraintTop_toTopOf="parent"
             app:lottie_autoPlay="true"
             app:lottie_loop="true"
-            app:lottie_rawRes="@raw/loading"/>
+            app:lottie_rawRes="@raw/loading"
+            app:showWhenLoading="@{viewModel.movieSearchResult}" />
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/error"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginHorizontal="@dimen/padding2x"
+            android:layout_marginTop="@dimen/margin4x"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"
+            app:lottie_rawRes="@raw/no_connection"
+            app:showWhenError="@{viewModel.movieSearchResult}" />
+
 
         <ImageView
             android:id="@+id/clear_text_image"
@@ -35,12 +54,12 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:elevation="1dp"
-            app:tint="@color/gray_text_color"
             android:src="@drawable/ic_baseline_close_24"
             android:transitionName="@string/clear_transition"
             app:layout_constraintBottom_toBottomOf="@+id/search_bar"
             app:layout_constraintEnd_toEndOf="@+id/search_bar"
             app:layout_constraintTop_toTopOf="@+id/search_bar"
+            app:tint="@color/gray_text_color"
             tools:ignore="ContentDescription" />
 
 
@@ -49,8 +68,10 @@
             style="@style/SearchBar"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:inputType="text"
+            android:layout_margin="@dimen/margin8dp"
             android:afterTextChanged="@{()->viewModel.searchForMovie()}"
+            android:inputType="text"
+            android:paddingLeft="@dimen/margin16dp"
             android:text="@={viewModel.movieTitle}"
             android:transitionName="@string/search_transition"
             app:layout_constraintEnd_toEndOf="parent"
@@ -73,12 +94,13 @@
             android:id="@+id/search_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_margin="@dimen/margin3x"
+            android:layout_margin="@dimen/margin8dp"
             android:visibility="visible"
             app:items="@{viewModel.movieSearchResult.toData().results}"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/break_line"
+            app:spanCount="3"
             tools:listitem="@layout/item_search_recycler_view" />
 
 
