--- a/app/src/main/res/layout/item_search_recycler_view.xml
+++ b/app/src/main/res/layout/item_search_recycler_view.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="item"
             type="com.watermelon.moviesapp.model.response.movie.Movie" />
@@ -11,70 +12,86 @@
         <variable
             name="listener"
             type="com.watermelon.moviesapp.ui.search.SearchViewModel" />
+
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/search_results"
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        style="@style/SearchBar"
-        android:onClick="@{() -> listener.onItemLoad(item.id)}"
-        android:layout_marginVertical="@dimen/margin2x"
-        android:layout_marginHorizontal="@dimen/margin8dp">
+    <androidx.cardview.widget.CardView
+        android:layout_width="120dp"
+        android:layout_height="200dp"
+        android:layout_marginVertical="@dimen/margin8dp"
+        android:layout_marginStart="@dimen/margin4dp"
+        android:backgroundTint="@color/cards_color"
+        app:cardCornerRadius="@dimen/margin16dp">
 
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/item_image"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:scaleType="centerCrop"
-            android:elevation="16dp"
-            app:image ="@{item.posterPath}"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent"
-            tools:src="@tools:sample/avatars" />
 
-        <TextView
-            android:id="@+id/text_move_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="@{item.originalTitle}"
-            android:textColor="@color/white"
-            android:textSize="@dimen/text20sp"
-            android:layout_marginStart="@dimen/margin28dp"
-            app:layout_constraintStart_toEndOf="@id/item_image"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="movie name" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/search_results"
+            style="@style/SearchBar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:onClick="@{() -> listener.onItemLoad(item.id)}">
 
-        <TextView
-            android:id="@+id/move_rate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/margin4dp"
-            android:textColor="@color/gray_text_color"
-            android:textSize="@dimen/text20sp"
-            android:text="@{String.valueOf(item.voteAverage)}"
-            android:layout_marginStart="@dimen/margin28dp"
-            app:layout_constraintStart_toEndOf="@id/item_image"
-            app:layout_constraintTop_toBottomOf="@id/text_move_name"
-            tools:text="move rate" />
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/item_image"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:elevation="16dp"
+                android:scaleType="centerCrop"
+                app:image="@{item.posterPath}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent"
+                tools:src="@tools:sample/avatars" />
 
-        <TextView
-            android:id="@+id/movie_director_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin28dp"
-            android:text="@{item.title}"
-            android:ellipsize="end"
-            android:gravity="center"
-            android:textColor="@color/gray_text_color"
-            android:lines="1"
-            android:layout_marginTop="35dp"
-            android:textSize="@dimen/text18sp"
-            app:layout_constraintStart_toEndOf="@+id/item_image"
-            app:layout_constraintTop_toBottomOf="@+id/text_move_name"
-            tools:text="movie director name" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/paragraph"
+                android:layout_width="0dp"
+                android:layout_height="60dp"
+                android:background="@drawable/header_shape"
+                android:elevation="16dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent">
+
+                <TextView
+                    android:id="@+id/move_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/margin4dp"
+                    android:layout_marginTop="4dp"
+                    android:maxHeight="25dp"
+                    android:minWidth="90dp"
+                    android:text="@{item.originalTitle}"
+
+                    android:textColor="@color/white"
+                    android:textSize="11sp"
+                    android:textStyle="bold"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="movie name" />
+
+                <TextView
+                    android:id="@+id/move_rate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/margin4dp"
+                    android:layout_marginTop="@dimen/margin2dp"
+                    android:text="@{String.valueOf(item.voteAverage)}"
+                    android:textColor="@color/white"
+                    android:textSize="12sp"
+                    android:textStyle="bold"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/move_name"
+                    tools:text="move rate" />
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 </layout>
