--- a/app/src/main/res/layout/item_home_middle_recycler.xml
+++ b/app/src/main/res/layout/item_home_middle_recycler.xml
@@ -66,7 +66,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:numStars="5"
-                android:rating="@{Float.valueOf(item.voteAverage)}"
+                android:rating="4"
                 android:progressTint="@color/icons"
                 android:progressBackgroundTint="@color/blue_text_color"
                 android:isIndicator="true"
