--- a/app/src/main/res/layout/fragment_about_actor.xml
+++ b/app/src/main/res/layout/fragment_about_actor.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
 
@@ -8,6 +10,102 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/birth_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin16dp"
+            android:layout_marginTop="35dp"
+            android:background="@drawable/ic_baseline_cake_24"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/birthday"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="1998-05-11"
+            android:layout_marginTop="35dp"
+            android:layout_marginStart="@dimen/margin16dp"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            app:layout_constraintStart_toEndOf="@+id/birth_icon"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/followers_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin16dp"
+            android:background="@drawable/ic_baseline_cake_24"
+            app:layout_constraintStart_toStartOf="@+id/birth_icon"
+            app:layout_constraintTop_toBottomOf="@+id/birth_icon" />
+
+        <TextView
+            android:id="@+id/followers"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="63.997"
+            android:layout_marginTop="@dimen/margin16dp"
+            android:layout_marginStart="@dimen/margin16dp"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            app:layout_constraintStart_toEndOf="@+id/followers_icon"
+            app:layout_constraintTop_toBottomOf="@+id/birthday" />
+
+        <ImageView
+            android:id="@+id/alive_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin16dp"
+            android:background="@drawable/ic_baseline_cake_24"
+            app:layout_constraintStart_toStartOf="@+id/followers_icon"
+            app:layout_constraintTop_toBottomOf="@+id/followers_icon" />
+
+        <TextView
+            android:id="@+id/is_alive"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="Alive"
+            android:textColor="@color/white"
+            android:layout_marginTop="@dimen/margin16dp"
+            android:layout_marginStart="@dimen/margin16dp"
+            android:textSize="20sp"
+            app:layout_constraintStart_toEndOf="@+id/alive_icon"
+            app:layout_constraintTop_toBottomOf="@+id/followers" />
+
+        <TextView
+            android:id="@+id/text_biography"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="35dp"
+            android:fontFamily="@font/archivo_black"
+            android:text="Biography"
+            android:textColor="@color/base_color"
+            android:textSize="20sp"
+            app:layout_constraintStart_toStartOf="@+id/alive_icon"
+            app:layout_constraintTop_toBottomOf="@+id/alive_icon" />
+
+        <View
+            android:layout_width="110dp"
+            android:layout_height="1dp"
+            android:layout_marginTop="2dp"
+            android:background="@color/base_color"
+            app:layout_constraintStart_toStartOf="@+id/text_biography"
+            app:layout_constraintTop_toBottomOf="@+id/text_biography" />
+
+        <TextView
+            android:id="@+id/biography"
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:layout_marginTop="@dimen/margin16dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginEnd="50dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/text_biography" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
