--- a/app/src/main/res/layout/fragment_details_tv.xml
+++ b/app/src/main/res/layout/fragment_details_tv.xml
@@ -42,6 +42,7 @@
             tools:src="@tools:sample/avatars" />
 
         <androidx.coordinatorlayout.widget.CoordinatorLayout
+            android:id="@+id/max"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -56,7 +57,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="0dp"
                     android:background="@drawable/details_shape"
                     android:elevation="@dimen/elevation8"
                     android:orientation="vertical"
