--- a/app/src/main/res/layout/fragment_categories_display.xml
+++ b/app/src/main/res/layout/fragment_categories_display.xml
@@ -61,6 +61,7 @@
             android:id="@+id/categories_recycler_display"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:layout_marginTop="@dimen/margin8dp"
             android:clipToPadding="false"
             android:paddingVertical="@dimen/margin16dp"
             android:layout_marginHorizontal="@dimen/margin8dp"
