--- a/app/src/main/res/layout/item_famous_people.xml
+++ b/app/src/main/res/layout/item_famous_people.xml
@@ -20,20 +20,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/margin16dp"
-        android:elevation="4dp"
-        android:background="@drawable/shape_season"
-        android:layout_marginVertical="@dimen/margin4dp"
         android:onClick="@{() -> listener.onItemClick(item.id)}">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/bottom_card"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="98dp"
             android:layout_marginHorizontal="@dimen/margin8dp"
-            android:layout_marginVertical="@dimen/margin16dp"
             android:backgroundTint="@color/cards_color"
             app:cardCornerRadius="16dp"
-            app:cardElevation="0dp"
+            app:cardElevation="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
         </androidx.cardview.widget.CardView>
@@ -52,7 +51,7 @@
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/item_image"
                 android:layout_width="90dp"
-                android:layout_height="110dp"
+                android:layout_height="105dp"
                 android:elevation="@dimen/margin16dp"
                 android:scaleType="centerCrop"
                 app:image="@{item.profilePath}"
@@ -60,6 +59,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize10Percent"
                 app:srcCompat="@drawable/splash_image" />
+
         </androidx.cardview.widget.CardView>
 
         <TextView
@@ -84,13 +84,13 @@
             android:id="@+id/release_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin4dp"
             android:elevation="@dimen/elevation8"
             android:text="@{item.mediaType}"
             android:textColor="@color/secondary_text_color"
             android:textSize="@dimen/text12sp"
+            android:layout_marginStart="@dimen/margin8dp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/bottom_card"
             app:layout_constraintLeft_toLeftOf="@id/cast_name"
             app:layout_constraintTop_toTopOf="@+id/bottom_card"
             tools:text="release date" />
