--- a/app/src/main/res/layout/fragment_about_actor.xml
+++ b/app/src/main/res/layout/fragment_about_actor.xml
@@ -94,8 +94,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
-                android:fontFamily="@font/archivo_black"
+                android:textStyle="bold"
                 android:text="@string/biography"
+                android:letterSpacing="0.2"
                 android:textColor="@color/base_color"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="@+id/alive_icon"
