--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -66,20 +66,34 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/title" />
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/trading_recycler"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+<!--            <androidx.recyclerview.widget.RecyclerView-->
+<!--                android:id="@+id/trading_recycler"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_marginTop="@dimen/margin2x"-->
+<!--                android:clipToPadding="false"-->
+<!--                android:orientation="horizontal"-->
+<!--                app:items="@{viewModel.tradingMovies.toData().results}"-->
+<!--                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
+<!--                app:layout_constraintEnd_toEndOf="parent"-->
+<!--                app:layout_constraintStart_toStartOf="parent"-->
+<!--                app:layout_constraintTop_toBottomOf="@id/title"-->
+<!--                app:showWhenSuccess="@{viewModel.tradingMovies}"-->
+<!--                tools:listitem="@layout/item_trending_movies" />-->
+
+            <com.denzcoskun.imageslider.ImageSlider
+                android:id="@+id/image_slider"
+                android:layout_width="wrap_content"
+                android:layout_height="300dp"
                 android:layout_marginTop="@dimen/margin2x"
-                android:clipToPadding="false"
-                android:orientation="horizontal"
-                app:items="@{viewModel.tradingMovies.toData().results}"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/title"
-                app:showWhenSuccess="@{viewModel.tradingMovies}"
-                tools:listitem="@layout/item_trending_movies" />
+                app:setSlider="@{viewModel.tradingMovies.toData().results}"
+                android:clipToPadding="false"
+                app:iss_auto_cycle="true"
+                app:iss_period="1000"
+                app:iss_delay="0"/>
 
             <TextView
                 android:id="@+id/popular_text"
@@ -93,7 +107,7 @@
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/trading_recycler"
+                app:layout_constraintTop_toBottomOf="@id/image_slider"
                 app:showWhenSuccess="@{viewModel.popularMovies}" />
 
             <androidx.recyclerview.widget.RecyclerView
