--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -84,11 +84,12 @@
             <com.denzcoskun.imageslider.ImageSlider
                 android:id="@+id/image_slider"
                 android:layout_width="wrap_content"
-                android:layout_height="300dp"
+                android:layout_height="350dp"
                 android:layout_marginTop="@dimen/margin2x"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/title"
+                app:listener="@{viewModel}"
                 app:setSlider="@{viewModel.tradingMovies.toData().results}"
                 android:clipToPadding="false"
                 app:iss_auto_cycle="true"
